<resources>
    <string name="app_name">DataCollector</string>
    <string name="tag_state">Tag State</string>
    <string name="label_phone_location">Location</string>
    <string name="label_phone_id">Phone ID</string>
    <string name="label_phone_orientation">Position</string>
    <string name="title_logfile_attributes">Log File Attributes</string>
    <string name="menuitem_stop_logging">Stop Logging</string>
    <string name="menuitem_stddev_threshold">StdDev Threshold</string>
    <string name="menuitem_start_calibration">Start Calibration</string>
    <string name="menuitem_stop_calibration">Stop Calibration</string>
    <string name="menuitem_calibrate_gyro">Calibrate Gyro</string>
    <string name="menuitem_disconnect_client">Disconnect Client</string>
    <string name="menuitem_start_logging">Start Logging</string>
    <string name="btn_txt_save_attributes">Save</string><string name="menuitem_logfile_attributes">Log Attributes</string>
    
    <string name="msg_invalid_attribs">Not all log file attributes specified correctly. Changes them under the %1$s menu option.</string>
    <string name="btn_txt_ok">OK</string>
    <string name="msg_wifi_not_logging">WiFi data currently not being logged.</string>
    <string name="hint_phone_location">NSH 2119</string>
    <string name="hint_phone_id">Ph1</string>
    <string name="hint_phone_orientation">Ceiling</string>
    <string name="btn_txt_yes">Yes</string>
    <string name="btn_txt_no">No</string>
    <string name="exit_password">braveteapot2119</string>
    <string name="btn_txt_cancel">Cancel</string>
    <string-array name="str_arr_phone_location">
        <item >(none)</item>
        <item >NSH-2119</item>
        <item >NSH-A532</item>
        <item >NSH-A513</item>
        <item >GHC-9</item>
    </string-array>
    <string-array name="str_arr_phone_id">
        <item >(none)</item>
        <item >Ph1</item>
        <item >Ph2</item>
        <item >Ph3</item>
        <item >Ph4</item>
        <item >Ph5</item>
        <item >Ph6</item>
        <item >Ph7</item>
        <item >Ph8</item>
        <item >Ph9</item>
    </string-array>
    <string-array name="str_arr_phone_orientation">
        <item >(none)</item>
        <item >Floor</item>
        <item >Ceiling</item>
        <item >Waist</item>
    </string-array>
    <string name="label_auto_create_log_file">Automatically Create Log Files</string>
    <string name="menuitem_about">About</string>
    <string name="label_logging_stop_date">Stop Time for Log Files</string>
</resources>
