<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000"
    android:stretchColumns="0,1,2" >

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dip">

        <TextView
            android:id="@+id/textView1"
            android:layout_gravity="left|center_vertical"
            android:text="@string/label_phone_location"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinnerPhoneLocation"
            android:layout_span="2"/>

	</TableRow>
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dip">

        <TextView
            android:id="@+id/textView2"
            android:layout_gravity="left|center_vertical"
            android:text="@string/label_phone_id"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <Spinner
            android:id="@+id/spinnerPhoneId"
            android:layout_span="2"/>
	</TableRow>

	<TableRow
	    android:id="@+id/tableRow2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:padding="2dip">

		<TextView
		    android:id="@+id/textView3"
		    android:layout_gravity="left|center_vertical"
		    android:text="@string/label_phone_orientation"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<Spinner
		    android:id="@+id/spinnerPhoneOrientation"
		    android:layout_span="2" />

	</TableRow>	<TableRow
	    android:id="@+id/tableRow3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:padding="2dip" >

		<TextView
		    android:id="@+id/textView4"
		    android:layout_span="3"
		    android:gravity="center_vertical"
		    android:text="@string/label_logging_stop_date"
		    android:textAppearance="?android:attr/textAppearanceMedium" />
    
    </TableRow>

	<TableRow
	    android:id="@+id/tableRow4"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:padding="2dip" >

		<TimePicker
		    android:id="@+id/timePickerStopLoggingTime"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_span="3" />

	</TableRow>

    <TableRow
	    android:id="@+id/tableRow5"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >

		<CheckBox
		    android:id="@+id/checkBoxAutoLogFile"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:gravity="center_vertical|center"
		    android:includeFontPadding="true"
		    android:text="@string/label_auto_create_log_file" 
		    android:layout_span="3" />

	</TableRow>

	<TableRow
	    android:id="@+id/tableRow6"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:padding="2dip" >

		<Button
		    android:id="@+id/btnSaveAttributes"
		    android:layout_span="1"
		    android:text="@string/btn_txt_save_attributes" />

		<Button
		    android:id="@+id/btnCancelAttributes"
		    android:layout_span="2"
		    android:text="@string/btn_txt_cancel" />

	</TableRow>
	
</TableLayout>